--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /ConsoleApplication1/.vs/ConsoleApplication1/v16/Browse.VC.opendb
+/ConsoleApplication1/.vs/ConsoleApplication1/v16/Browse.VC.db
+/ConsoleApplication1/.vs/ConsoleApplication1/v16/Browse.VC.db-shm
