--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /ConsoleApplication1/.vs/ConsoleApplication1/v16/Browse.VC.opendb
 /ConsoleApplication1/.vs/ConsoleApplication1/v16/Browse.VC.db
 /ConsoleApplication1/.vs/ConsoleApplication1/v16/Browse.VC.db-shm
+/ConsoleApplication1/.vs/ConsoleApplication1/v16/.suo
